log
Thu 21 Mar 2024 02:06:38 PM UTC: 
 tests:  0|5
total_score: 0/70
c803435
Thu 21 Mar 2024 02:08:58 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|4
total_score: 10/70
7662b54
Thu 21 Mar 2024 08:26:21 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:64:3: error: this ‘while’ clause does not guard... [-Werror=misleading-indentation]
   64 |   while (dato != NULL);
      |   ^~~~~
exercises.c:65:3: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘while’
   65 |   {
      |   ^
cc1: all warnings being treated as errors
Compilation failed
f247c99
Thu 21 Mar 2024 08:28:00 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
9c5f049
Thu 21 Mar 2024 08:32:04 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
7340376
Fri 22 Mar 2024 02:40:26 AM UTC: 
 exercises.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  3|2
total_score: 40/70
ee316f7
Fri 22 Mar 2024 02:44:26 AM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
5fdbc71
Fri 22 Mar 2024 02:45:43 AM UTC: 
 exercises.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  0|0
a0b6322
Fri 22 Mar 2024 02:47:18 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
6b94372
Fri 22 Mar 2024 02:51:00 AM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  4|1
total_score: 50/70
b0bfdbf
Fri 22 Mar 2024 02:56:15 AM UTC: 
 exercises.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:130:23: error: passing argument 2 of ‘push’ makes pointer from integer without a cast [-Werror=int-conversion]
  130 |         push(P, cadena[i]);
      |                 ~~~~~~^~~
      |                       |
      |                       char
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:31: note: expected ‘void *’ but argument is of type ‘char’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
d008463
Fri 22 Mar 2024 02:58:08 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
23861bf
